spaces, alignments and nav fixes on blackboard theme

--- a/less/themes/blackboard.less
+++ b/less/themes/blackboard.less
@@ -1,41 +1,41 @@
 /* Color Palette */
 @color01: #343434;
-@color02: #444;
-@color03: #000;
-@color04: #1CBBD8;
+@color02: #2C2C2C;
+@color03: #fff;
+@color04: #1cbcd8;
 @color05: #fff;
 @color06: #fff;
 
 /* Body Variables */ 
 @body-background-color: @color01;
-@body-text-color      : @color01;
+@body-text-color      : @color03;
 @body-font-family     : "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @body-font-size       : 15px;
 @line-height-base     : 1.428571429; // 20/14
 @line-height-computed : floor((@body-font-size * @line-height-base)); // ~20px
 
 /* Row */
-@row-background-color : #4D4D4D;
+@row-background-color : @color01;
 
 /* Code Font */
 @code-font-family     : Inconsolata, monospace;
 
 /* Nav Variables */
-@nav-background-color      : @color03;
+@nav-background-color      : @color02;
 @nav-link-color            : #fff;
 @nav-link-color-hover      : @color04;
 @nav-link-background       : @color03;
 @nav-link-background-hover : @color04;
 
 /* Buttons */
-@btn-robot-color        : #fff;
-@btn-robot-background   : @color01;
-@btn-run-color          : #C36148;
+@btn-robot-color        : @color01;
+@btn-robot-background   : @color04;
+@btn-run-color          : @color01;
 @btn-run-background     : #000;
-@btn-device-color       : #000;
-@btn-device-background  : #fff;
-@btn-connect-color      : #DEC763;
-@btn-connect-background : #000;
+@btn-device-color       : @color01;
+@btn-device-background  : #56d884;
+@btn-connect-color      : @color01;
+@btn-connect-background : #d8ca69;
 
 /* Forms */
 @input-border-color: #999;
@@ -46,3 +46,41 @@
 
 /* Widgets */
 @modal-bg-color: #4D4D4D;
+
+@import '../vendor/elements';
+@import '../support/mixins';
+
+body {
+  background-color: @body-background-color;
+  color: @body-text-color;
+}
+
+nav {
+  background: @nav-background-color;
+}
+
+.row {
+  background-color: @row-background-color;
+}
+
+.btn-robot {
+  .button-variant(@btn-robot-color; @btn-robot-background; @btn-robot-color);
+}
+
+.btn-device, .btn-save {
+  .button-variant(@btn-device-color; @btn-device-background; @btn-device-color);
+}
+
+.btn-connect {
+  .button-variant(@btn-connect-color; @btn-connect-background; @btn-connect-color);
+}
+
+.btn-run, .btn-reset {
+  .button-variant(@btn-run-color; @btn-run-background; @btn-run-color);
+}
+
+input[type="text"], select, textarea {
+  color: @body-text-color;
+  background: #666;
+  .form-control-focus(@input-border-color-focus);
+}
